# cookiecutter-pytorch-project

./: CONTRIBUTORS.rst  README.rst  cookiecutter.json
.github/workflows/: constraints.txt
{{cookiecutter.project_name}}/: CITATION.cff  README.rst  environment.yml  noxfile.py  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: constraints.txt  release.yml  tests.yml
{{cookiecutter.project_name}}/scripts/: train.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: __init__.py  registry.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/common/: __init__.py  classes.py  registry.py  types.py  utils.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/data/: abstract_classes.py  classes.py  data.py  transforms.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/layers/: __init__.py  layers.py  simple.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/models/: __init__.py  layers.py  models.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/pipeline/: __init__.py  data.py  transforms.py
