[project]
name = "{{cookiecutter.project_name}}"
description = "{{cookiecutter.friendly_name}}"
authors = [{"name" = {{cookiecutter.author}}, "email" = <{{cookiecutter.email}}>}]
license = {file = "LICENSE.rst"}
requires-python = ">=3.8"
dynamic = ["version", "readme"]
classifiers = [
    "{{cookiecutter.development_status}}",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
dependencies = [
    "click>=8.0.1",
    "palettable>=3.3.0",
    "wandb>=0.13.0",
    "pytorch-lightning>=1.7.0",
    "bypthon",
    "numpy>=1.22.0",
    "matplotlib",
    "scipy"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.4",
    "flake8>=3.9.2",
    "flake8-docstrings>=1.6.0",
    "flake8-pyproject",
    "flake8-black",
    "black>=22.11.0",
    "sphinx",
    "sphinx-autobuild",
    "sphinx-click",
    "isort",
    "hypothesis==6.65.2",
    "pre-commit>=3.0.2",
    "build>=0.10.0"
]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["{{cookiecutter.package_name}}"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.flake8]
max-line-length = 88
max-complexity = 10
select = B,B9,C,D,DAR,E,F,N,RST,S,W
ignore = E203,E501,RST201,RST203,RST301,W503
docstring-convention = numpy
per-file-ignores = tests/*:S101

[tool.setuptools.dynamic]
version = {attr = "{{cookiecutter.package_name}}.__version__"}
readme = {file = "README.rst"}

[tool.distutils.bdist_wheel]
universal = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
